[gd_scene load_steps=5 format=3 uid="uid://baelgfaeel8p2"]

[ext_resource type="Script" uid="uid://e3l676ta7bvk" path="res://scripts/back_ground_loby.gd" id="1_ekgif"]
[ext_resource type="Texture2D" uid="uid://8qfbrpbx1ex8" path="res://assets/A01ParalaxLoby/03.png" id="2_ml7ln"]
[ext_resource type="Texture2D" uid="uid://bb6esuciqb0hc" path="res://assets/A01ParalaxLoby/02.png" id="3_yf8v5"]
[ext_resource type="Texture2D" uid="uid://di2cfnjuq2pt6" path="res://assets/A01ParalaxLoby/01.png" id="4_ke4yd"]

[node name="BackGroundLoby" type="Node2D"]
script = ExtResource("1_ekgif")

[node name="ParallaxFundo" type="Parallax2D" parent="."]
scroll_scale = Vector2(2, 2)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxFundo"]
position = Vector2(52.51479, 34.500015)
scale = Vector2(0.47072235, 0.46386716)
texture = ExtResource("2_ml7ln")

[node name="ParallaxMeio" type="Parallax2D" parent="."]
scroll_scale = Vector2(4, 4)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxMeio"]
position = Vector2(31.625004, 13.250023)
scale = Vector2(0.45621744, 0.44091803)
texture = ExtResource("3_yf8v5")

[node name="ParallaxFrente" type="Parallax2D" parent="."]
scroll_scale = Vector2(6, 6)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxFrente"]
position = Vector2(41, 88)
scale = Vector2(0.26464844, 0.26464847)
texture = ExtResource("4_ke4yd")
